[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Sprechen.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/btnReset.png" type="Texture" id=2]
[ext_resource path="res://Images/btnReturn.png" type="Texture" id=3]
[ext_resource path="res://Component/Backgroud.gd" type="Script" id=4]
[ext_resource path="res://Images/background_x.jpg" type="Texture" id=5]
[ext_resource path="res://Images/board_x.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=7]
size = 96
font_data = ExtResource( 1 )

[node name="Backgroud" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -990.0
margin_top = -562.0
margin_right = 1010.0
margin_bottom = 428.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="Polygon2D2" type="Polygon2D" parent="."]
color = Color( 0.345098, 0.345098, 0.345098, 1 )
polygon = PoolVector2Array( -600, -421, 625, -418, 626, 396, -601, 409 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -620.0
margin_top = -447.0
margin_right = 616.0
margin_bottom = 396.0
input_pass_on_modal_close_click = false
texture = ExtResource( 6 )
patch_margin_left = 53
patch_margin_top = 48
patch_margin_right = 55
patch_margin_bottom = 54

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, 470 )
color = Color( 0.709804, 0.709804, 0.709804, 1 )
polygon = PoolVector2Array( -1009, -73, 1049, -73, 1050, 117, -1008, 115 )

[node name="Label" type="Label" parent="."]
margin_left = -535.0
margin_top = 441.0
margin_right = -289.0
margin_bottom = 537.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Level1"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -21, 32 )

[node name="BtnReturn" type="TextureButton" parent="Node2D"]
margin_left = -905.0
margin_top = 324.0
margin_right = -809.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 47, 51 )
texture_normal = ExtResource( 3 )

[node name="BtnReset" type="TextureButton" parent="Node2D"]
margin_left = -772.0
margin_top = 326.0
margin_right = -676.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 49, 47 )
texture_normal = ExtResource( 2 )

[connection signal="mouse_entered" from="Node2D/BtnReturn" to="." method="_on_BtnReturn_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/BtnReturn" to="." method="_on_BtnReturn_mouse_exited"]
[connection signal="pressed" from="Node2D/BtnReturn" to="." method="_on_BtnReturn_pressed"]
[connection signal="mouse_entered" from="Node2D/BtnReset" to="." method="_on_BtnReset_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/BtnReset" to="." method="_on_BtnReset_mouse_exited"]
[connection signal="pressed" from="Node2D/BtnReset" to="." method="_on_BtnReset_pressed"]
